# huawei-server-ibmc-kvm-control

./: .gitignore  Directory.Build.props  IbmcKvm.slnx  LICENSE  README.md  progress.md  task_plan.md
agent/: Cargo.toml  README.md
agent/packaging/: ibmc-kvm-agent.service
agent/src/: auth.rs  config.rs  frame.rs  lib.rs  main.rs  messages.rs  protocol.rs  server.rs  test_support.rs  tls.rs
agent/src/x11/: capture.rs  input.rs  mod.rs
docs/: legacy-feature-roadmap.md
docs/adr/: 0001-dotnet-wpf-x64.md  0002-managed-virtual-media-stack.md  0003-capability-oriented-protocol-adapters.md  0004-cross-platform-avalonia-desktop.md  0005-rust-linux-agent.md
docs/plans/: 2026-07-14-encrypted-connection-settings.md  2026-07-14-ibmc-kvm-design.md  2026-07-14-ibmc-kvm-implementation.md  2026-07-14-ibmc-virtual-media-design.md  2026-07-14-ibmc-virtual-media-implementation.md  2026-07-14-input-fix-design.md  2026-07-14-two-window-console-design.md  2026-07-15-legacy-feature-parity-design.md  2026-07-15-legacy-feature-parity-implementation.md  2026-07-16-single-line-console-toolbar-design.md
src/IbmcKvm.App/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  App.xaml.cs  CertificateDecisionWindow.xaml  CertificateDecisionWindow.xaml.cs  CertificateTrustWindow.xaml  CertificateTrustWindow.xaml.cs  CustomKeyCombinationWindow.xaml  CustomKeyCombinationWindow.xaml.cs  HelpWindow.xaml  HelpWindow.xaml.cs  IbmcKvm.App.csproj  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  VirtualMediaWindow.xaml  VirtualMediaWindow.xaml.cs
(+227 files in other folders)
