[package]
name = "ibmc-kvm-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
jpeg-encoder = "0.6"
rand = "0.9"
rcgen = "0.14"
rustls = "0.23"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = "0.26"
x11rb = { version = "0.13", features = ["xtest"] }
zeroize = "1.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
